2006-11-25  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/msgwindow.c, src/notebook.c, src/msgwindow.h, src/notebook.h:
   Add some const char* argument modifiers, remove unneeded static from
   some local vars.
 * src/vte.c:
   Remove vte_char_size_changed() workaround, not needed since r988;
   this also fixes an issue where the VTE is limited to 30x5 chars.


2006-11-24  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.h, src/prefs.c, src/dialogs.c, src/ui_utils.c:
   Add frame for VTE Preferences tab, update packing.
   Replace ui_frame_new() with ui_frame_new_with_alignment().
 * src/callbacks.c, src/callbacks.h, src/vte.c, src/vte.h, src/prefs.c,
   src/prefs.h:
   Move VTE preferences GUI code to vte.c.
   Move on_pref_tools_button_clicked() to prefs.c.


2006-11-23  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c: Fixed segfault when opening the preferences dialog for
              the first time from the VTE widget.


2006-11-23  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, src/geany.h, doc/geany.docbook,
   data/filetypes.*:
   Only use [a-zA-Z0-9] chars for default wordchars, to avoid problems
   with word matching when using Find & Replace functions.
 * src/keybindings.c:
   Add switching to a notebook tab number using Alt-1 to Alt-9; Alt-0
   switches to the last tab.
 * src/geany.h, data/filetypes.*:
   Add underscore to default wordchars again (oops).


2006-11-22  Frank Lanitz  <frank@frank.uvena.de>

 * po/hu.po, src/about.c, THANKS, configure.in:
   Added Hungarian translation (Thanks to Gabor Kmetyko aka
   kilo <kg_kilo@freemail.hu>).


2006-11-22  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/notebook.c, src/notebook.h, src/document.c:
   Ensure tab DnD is enabled when tabs are added; use
   notebook_remove_page() instead of gtk_notebook_remove_page().
   Unified notebook_[en|dis]able_dnd_for_dropping_files() in
   tab_count_changed().

